[gd_scene load_steps=13 format=3 uid="uid://w3rf663t1tf4"]

[ext_resource type="Script" path="res://scripts/get_random_equipment_pop_up_box.gd" id="1_yrpbf"]
[ext_resource type="StyleBox" uid="uid://bob4v5lfr2uyv" path="res://scenes/BlackAndWhite.tres" id="2_4eemu"]
[ext_resource type="LabelSettings" uid="uid://dtlee2oottm2v" path="res://scenes/NormalLabelSetting.tres" id="3_sf5uc"]
[ext_resource type="LabelSettings" uid="uid://debsfgvwloi8d" path="res://scenes/SmallLabelSetting.tres" id="4_onbh7"]
[ext_resource type="Texture2D" uid="uid://ds0axcx26hx1e" path="res://assets/icon/arrow-cursor.svg" id="5_8bfs1"]
[ext_resource type="PackedScene" uid="uid://c1ocw21be3t3w" path="res://scenes/ui_prefab/eq_panel.tscn" id="6_htijt"]

[sub_resource type="Animation" id="Animation_gl08w"]
resource_name = "ChooseLeft"

[sub_resource type="Animation" id="Animation_82ktt"]
resource_name = "ChooseRight"

[sub_resource type="Animation" id="Animation_1luby"]
resource_name = "FadeIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_esxh2"]
resource_name = "FadeOut"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}

[sub_resource type="Animation" id="Animation_p44p8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xr6q"]
_data = {
"ChooseLeft": SubResource("Animation_gl08w"),
"ChooseRight": SubResource("Animation_82ktt"),
"FadeIn": SubResource("Animation_1luby"),
"FadeOut": SubResource("Animation_esxh2"),
"RESET": SubResource("Animation_p44p8")
}

[node name="PopUpBox" type="Panel"]
z_index = 3
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yrpbf")

[node name="ChangeEquipmentBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 229.0
offset_top = 158.0
offset_right = 796.0
offset_bottom = 595.0
theme_override_styles/panel = ExtResource("2_4eemu")

[node name="GridPanel" type="Control" parent="ChangeEquipmentBox"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel3" type="Panel" parent="ChangeEquipmentBox/GridPanel"]
layout_mode = 0
offset_left = 249.0
offset_top = 188.0
offset_right = 324.0
offset_bottom = 263.0
theme_override_styles/panel = ExtResource("2_4eemu")

[node name="Panel6" type="Panel" parent="ChangeEquipmentBox/GridPanel"]
layout_mode = 0
offset_left = 323.0
offset_top = 117.0
offset_right = 398.0
offset_bottom = 192.0
theme_override_styles/panel = ExtResource("2_4eemu")

[node name="Panel5" type="Panel" parent="ChangeEquipmentBox/GridPanel"]
layout_mode = 0
offset_left = 250.0
offset_top = 117.0
offset_right = 325.0
offset_bottom = 192.0
theme_override_styles/panel = ExtResource("2_4eemu")

[node name="Panel" type="Panel" parent="ChangeEquipmentBox/GridPanel"]
layout_mode = 0
offset_left = 178.0
offset_top = 117.0
offset_right = 253.0
offset_bottom = 191.0
theme_override_styles/panel = ExtResource("2_4eemu")

[node name="Icon1" type="TextureRect" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 187.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 181.0

[node name="Icon2" type="TextureRect" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 329.0
offset_top = 126.0
offset_right = 391.0
offset_bottom = 188.0

[node name="TitleLabel" type="Label" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 240.0
offset_top = 27.0
offset_right = 400.0
offset_bottom = 63.0
text = "选哪个？"
label_settings = ExtResource("3_sf5uc")

[node name="CloseDes" type="Label" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 252.0
offset_top = 199.0
offset_right = 322.0
offset_bottom = 254.0
text = "放弃
金币+10"
label_settings = ExtResource("4_onbh7")

[node name="TextureRect" type="TextureRect" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 371.0
offset_top = 149.0
offset_right = 371.0
offset_bottom = 149.0
rotation = 2.00702
texture = ExtResource("5_8bfs1")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 197.0
offset_top = 164.0
offset_right = 197.0
offset_bottom = 164.0
rotation = 5.13436
texture = ExtResource("5_8bfs1")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="ChangeEquipmentBox"]
layout_mode = 0
offset_left = 292.0
offset_top = 248.0
offset_right = 292.0
offset_bottom = 248.0
rotation = 3.53237
texture = ExtResource("5_8bfs1")
expand_mode = 1

[node name="TargetLabel2" type="Label" parent="ChangeEquipmentBox"]
modulate = Color(1, 1, 0.301961, 1)
layout_mode = 0
offset_left = 65.0
offset_top = 104.0
offset_right = 161.0
offset_bottom = 140.0
text = "新装备"
label_settings = ExtResource("4_onbh7")

[node name="SourceLabel2" type="Label" parent="ChangeEquipmentBox"]
modulate = Color(1, 1, 0.301961, 1)
layout_mode = 0
offset_left = 458.0
offset_top = 109.0
offset_right = 586.0
offset_bottom = 145.0
text = "新装备"
label_settings = ExtResource("4_onbh7")

[node name="NewEq1" parent="ChangeEquipmentBox" instance=ExtResource("6_htijt")]
layout_mode = 0
offset_left = 5.0
offset_top = 132.0
offset_right = 177.0
offset_bottom = 292.0

[node name="NewEq2" parent="ChangeEquipmentBox" instance=ExtResource("6_htijt")]
layout_mode = 0
offset_left = 400.0
offset_top = 134.0
offset_right = 572.0
offset_bottom = 294.0

[node name="OldEq1" parent="ChangeEquipmentBox" instance=ExtResource("6_htijt")]
layout_mode = 0
offset_left = -172.0
offset_top = 95.0
offset_right = 0.0
offset_bottom = 255.0
scale = Vector2(1e-05, 1e-05)

[node name="OldEq2" parent="ChangeEquipmentBox" instance=ExtResource("6_htijt")]
layout_mode = 0
offset_left = 576.0
offset_top = 101.0
offset_right = 748.0
offset_bottom = 261.0
scale = Vector2(1e-05, 1e-05)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4xr6q")
}

[node name="Character" type="Control" parent="."]
z_index = 10
anchors_preset = 0
offset_left = 517.0
offset_top = 312.0
offset_right = 557.0
offset_bottom = 352.0
scale = Vector2(2, 2)
